--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,6 +36,7 @@
   margin-bottom: 1em;
   overflow: auto;
   padding: 20px;
+  width: 766px;
 }
 .conversation_header {
   width: 100%;
@@ -207,15 +208,6 @@ textarea {
     color: red;
 }
 
-@media (min-width: 640px) {
-  .question-input--input-container {
-    width: 82.97872%;
-    margin-right: 2.12766%;
-    float: left;
-    display: block;
-  }
-}
-
 .question-input--input {
   width: 100%;
   max-width: initial;
@@ -223,15 +215,6 @@ textarea {
 
 .question-input--button-container {
   display: block;
-}
-
-@media (min-width: 640px) {
-  .question-input--button-container {
-    width: 14.89362%;
-    float: left;
-    display: block;
-    margin-top: 0rem;
-  }
 }
 
 .question-input--submit-button {
@@ -242,19 +225,18 @@ textarea {
   display: block;
 }
 
-@media (min-width: 640px) {
-  .sample-questions--left {
-    width: 48.93617%;
-    margin-right: 2.12766%;
-    float: left;
-    display: block;
-  }
-}
-
 .sample-questions--right {
   display: block;
 }
 
+.agree_container {
+    float: right;
+    margin-top: -20px;
+    margin-right: -15px;
+}
+.agree_link {
+    font-size: .75em;
+}
 
 .base--a {
   cursor: pointer;
