--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,7 +36,6 @@
   margin-bottom: 1em;
   overflow: auto;
   padding: 20px;
-  width: 766px;
 }
 .conversation_header {
   width: 100%;
@@ -83,7 +82,7 @@
 
 .statement_container {
   float: left;
-  width: 60%;
+  width: 64%;
   border-right: 1px solid #c7c7c7;
   margin-right: 15px;
   margin-top: 0;
@@ -112,7 +111,7 @@
 
 .score_container {
   float: left;
-  width: 25%;
+  width: auto;
   margin-top: 3px;
 }
 
@@ -121,11 +120,11 @@
   font-size: .75em;
   margin-top: 0;
   padding-right: .5em;
-  width: auto;
+  width: 75%;
 }
 .tone_score {
   font-weight: bold;
-  float: left;
+  float: right;
   font-size: .75em;
   margin-top: 0;
   width: 25%;
@@ -133,14 +132,6 @@
 
 .negative {
   color: #DB207C;
-}
-.vote {
-  float: right;
-  margin-top: -4px;
-}
-.voteicon {
-    margin-top: 0;
-    margin-left: 1em;
 }
 
 .contribute_container {
@@ -208,6 +199,15 @@ textarea {
     color: red;
 }
 
+@media (min-width: 640px) {
+  .question-input--input-container {
+    width: 82.97872%;
+    margin-right: 2.12766%;
+    float: left;
+    display: block;
+  }
+}
+
 .question-input--input {
   width: 100%;
   max-width: initial;
@@ -215,6 +215,15 @@ textarea {
 
 .question-input--button-container {
   display: block;
+}
+
+@media (min-width: 640px) {
+  .question-input--button-container {
+    width: 14.89362%;
+    float: left;
+    display: block;
+    margin-top: 0rem;
+  }
 }
 
 .question-input--submit-button {
@@ -225,17 +234,36 @@ textarea {
   display: block;
 }
 
+@media (min-width: 640px) {
+  .sample-questions--left {
+    width: 48.93617%;
+    margin-right: 2.12766%;
+    float: left;
+    display: block;
+  }
+}
+
 .sample-questions--right {
   display: block;
 }
 
-.agree_container {
-    float: right;
-    margin-top: -20px;
-    margin-right: -15px;
+@media (min-width: 640px) {
+  .sample-questions--right {
+    width: 48.93617%;
+    float: left;
+    display: block;
+    margin-top: 0rem;
+  }
+
+
+.speaker_statement {
+    margin-right: 0;
 }
-.agree_link {
-    font-size: .75em;
+
+.time_stamp {
+    display: block;
+    margin-top: 0;
+}
 }
 
 .base--a {
