added link and container
you will need to add the form buttons and display functionality
also fixed the voting icons to have a pointer

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -138,6 +138,9 @@
   margin-top: 0;
   width: 25%;
 }
+.other_tones {
+font-size: 0.75em;
+}
 
 .negative {
   color: #DB207C;
@@ -299,6 +302,6 @@ textarea {
   background: transparent;
 }
 
-.thumbsup {
-  margin-right: .5em;
+.thumb {
+  cursor: pointer;
 }
