Perceived accuracy voting feature (#8)
* adding log_perceived_accuracy for data collection feature part 1

* minor change

* adding cloudant dependency and updating version on watson-react-components dependency in package.json

* adding ButtonsGroup with thumbs-up and thumbs-down Icons for the data collection feature.

* updating css to overwrite styling on ButtonsGroup to work for the thumbs-up and thumbs-down data collection feature.  ALso updating styling on the score_container div and its children to properly position the thumbs-up and thumbs-down ButtonsGroup.  Added padding to buttons_first to space thumbs-up ant thumbs-down.

* adding tone_analyzer_payload to the conversation state json object for use in the data collection feature

* updated log_perceived_accuracy endpoint to be a post and use live feedback

* added onVote function to props and added a local function castVote to call onVote

* added onVote function to props and added onVote to the ConversationItem

* minor cleanup

* added onVote function to make ajax call to app.js and updated Output props to include onVote

* adding in ButtonsGroup voting feature for None tone

* minor cleanup

* adding in css from @alexmeyer in https://github.com/watson-developer-cloud/customer-engagement-nodejs/pull/7.  Also added size attribute to the thumb class to adjust the sizing of thumb Icon.

* adding thumb className to thumbs up/down Icons in the conversation-item component

* adding source attribute to conversation item to handle new request from service team to only log votes on new utterances from users (and not on the system provided utterances that are part of the initial conversation).

* changes made to decrease spacing between tone_result divs containing tone_text and buttons-group child divs

* adding resetting state to demo component and setting resetting prop on output component

* adding resetting prop to output component and setting resetting prop on conversationi

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,7 +13,6 @@
   height: auto;
   min-height: 90px;
   overflow: auto;
-
 }
 
 .reset_link {
@@ -36,6 +35,7 @@
   margin-bottom: 1em;
   overflow: auto;
   padding: 20px;
+  width: 766px;
 }
 .conversation_header {
   width: 100%;
@@ -63,28 +63,26 @@
   width: 70px;
 }
 .customer_avatar {
-    background-image: url("/images/customer.png");
-    height: 70px;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    border: 1px solid #c7c7c7;
-    border-radius: 10px;
+  background-image: url("/images/customer.png");
+  height: 70px;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  border: 1px solid #c7c7c7;
+  border-radius: 10px;
 }
 
 .agent_avatar {
-    background-image: url("/images/agent.png");
-    height: 70px;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    border: 1px solid #c7c7c7;
-    border-radius: 10px;
+  background-image: url("/images/agent.png");
+  height: 70px;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  border: 1px solid #c7c7c7;
+  border-radius: 10px;
 }
 
 .statement_container {
   float: left;
-  width: 64%;
-  border-right: 1px solid #c7c7c7;
-  margin-right: 15px;
+  width: 60%;
   margin-top: 0;
   min-height: 70px;
 }
@@ -111,27 +109,77 @@
 
 .score_container {
   float: left;
-  width: auto;
+  width: 25%;
   margin-top: 3px;
+  border-left: 1px solid #c7c7c7;
+  padding-left: 1rem;
+}
+
+.tone_results {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  margin: 0rem;
+  height: 1.75rem;
 }
 
 .tone_text {
-  float: left;
   font-size: .75em;
-  margin-top: 0;
   padding-right: .5em;
-  width: 75%;
+  width: auto;
+  flex-grow: 2;
 }
 .tone_score {
   font-weight: bold;
-  float: right;
+  float: left;
   font-size: .75em;
   margin-top: 0;
   width: 25%;
 }
+.other_tones {
+  font-size: 0.75em;
+}
 
 .negative {
   color: #DB207C;
+}
+
+.buttons-group {
+  margin-top: 0;
+  width: auto;
+}
+
+.buttons-group--button {
+  border: none;
+  border-radius: 0rem;
+  padding: 0rem;
+}
+
+.buttons-group--button_last {
+  border-radius: 0rem;
+  padding-right: 1rem;
+}
+
+.buttons-group--button_first {
+  border-radius: 0rem;
+  padding-right: 0rem;
+}
+
+.base--radio:checked+.buttons-group--button {
+  background: transparent;
+}
+
+.base--radio:checked + .buttons-group--button .icon {
+  fill: rgb(152, 85, 212);
+}
+
+.buttons-group--button:active {
+  background: transparent;
+}
+
+.thumb {
+  cursor: pointer;
+  height: 15px;
 }
 
 .contribute_container {
@@ -155,10 +203,15 @@ textarea {
 }
 
 .input_area {
-    width: 90%;
-    float: left;
-    margin-top: 0;
+  width: 90%;
+  float: left;
+  margin-top: 0;
 }
+
+#newUtteranceTextArea:invalid {
+  box-shadow: none;
+}
+
 .input_avatar {
   float:left;
   width: 35px;
@@ -196,16 +249,7 @@ textarea {
 }
 
 .alerttext {
-    color: red;
-}
-
-@media (min-width: 640px) {
-  .question-input--input-container {
-    width: 82.97872%;
-    margin-right: 2.12766%;
-    float: left;
-    display: block;
-  }
+  color: red;
 }
 
 .question-input--input {
@@ -217,15 +261,6 @@ textarea {
   display: block;
 }
 
-@media (min-width: 640px) {
-  .question-input--button-container {
-    width: 14.89362%;
-    float: left;
-    display: block;
-    margin-top: 0rem;
-  }
-}
-
 .question-input--submit-button {
   width: 100%;
 }
@@ -234,36 +269,18 @@ textarea {
   display: block;
 }
 
-@media (min-width: 640px) {
-  .sample-questions--left {
-    width: 48.93617%;
-    margin-right: 2.12766%;
-    float: left;
-    display: block;
-  }
-}
-
 .sample-questions--right {
   display: block;
 }
 
-@media (min-width: 640px) {
-  .sample-questions--right {
-    width: 48.93617%;
-    float: left;
-    display: block;
-    margin-top: 0rem;
-  }
-
-
-.speaker_statement {
-    margin-right: 0;
+.agree_container {
+  float: right;
+  margin-top: -20px;
+  margin-right: 0;
+  margin-bottom: 0.5rem;
 }
-
-.time_stamp {
-    display: block;
-    margin-top: 0;
-}
+.agree_link {
+  font-size: .75em;
 }
 
 .base--a {
