--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,37 +7,50 @@
 }
 
 .checkbox_group_container {
-  margin-top: 1em;
-  margin-bottom: 1em;
+    font-size: .875em;
+    max-height: 0;
+    visibility: hidden;
+    transition: 0.2s;
+    z-index: 9000;
+    overflow: auto;
+    margin-top: 0;
+    margin-left: 1em;
+    width: 766px;
+  }
+
+.checkbox_group_container_show {
+  display:inline-block;
+  float: left;
+  visibility: visible;
+  opacity: 1;
+  max-height: 30rem;
   overflow: auto;
-  padding: 20px;
-  width: 766px;
+  transition: 0.3s;
+  margin-top: 1em;
+  overflow: hidden;
 }
 
 .checkbox_container {
-  display: flex;
-  width: 100%;
-  align-items: center;
-  margin: 0rem;
-  height: 1.75rem;
+  margin-right: 10px;
+  border-radius: 3px;
+
 }
 
 .checkbox_input {
-  margin-top: 0;
-  width: auto;ß
+  margin-right:0px;
 }
+
+/* from meeting with James Zhang - June 21 */
+/*input[type=checkbox] + label.checkbox_input {
+  margin-right:0px;
+}*/
 
 .checkbox_label {
-  /* float: left; */
-  font-size: .75em;
-  /* margin-top: 0; */
-  /* margin-top: 1em; */
-  padding-right: .5em;
-  width: auto;
-  flex-grow: 2;
+  margin-right: 15px;
+  margin-top: 0px;
+  cursor: pointer;
+  display: inline-block;
 }
-
-
 
 .conversation_frame {
   width: 700px;
@@ -65,8 +78,6 @@
 }
 
 .speaker {
-  margin-top: 1em;
-  margin-bottom: 1em;
   overflow: auto;
   padding: 20px;
   width: 766px;
@@ -95,6 +106,9 @@
   float:left;
   margin-right: 1em;
   width: 70px;
+
+  margin-top: 0;
+  margin-bottom: 0;
 }
 .customer_avatar {
     background-image: url("/images/customer.png");
@@ -117,8 +131,6 @@
 .statement_container {
   float: left;
   width: 60%;
-  /* border-right: 1px solid #c7c7c7; */
-  /* margin-right: 15px; */
   margin-top: 0;
   min-height: 70px;
 }
@@ -147,7 +159,6 @@
   float: left;
   width: 25%;
   margin-top: 3px;
-  /* AW */
   border-left: 1px solid #c7c7c7;
   padding-left: 1rem;
 }
@@ -161,10 +172,7 @@
 }
 
 .tone_text {
-  /* float: left; */
   font-size: .75em;
-  /* margin-top: 0; */
-  /* margin-top: 1em; */
   padding-right: .5em;
   width: auto;
   flex-grow: 2;
@@ -183,23 +191,10 @@ font-size: 0.75em;
 .negative {
   color: #DB207C;
 }
-/*
-.vote {
-  float: right;
-  margin-top: -4px;
-}
-.voteicon {
-    margin-top: 0;
-    margin-left: 1em;
-}
-*/
 
 .buttons-group {
-  /* float: right; */
   margin-top: 0;
   width: auto;
-  /*margin-right: .3em;*/
-  /* flex-grow: 0; */
 }
 
 .buttons-group--button {
@@ -328,7 +323,6 @@ textarea {
 .agree_container {
     float: right;
     margin-top: -20px;
-    /* margin-right: -15px; */
     margin-right: 0;
     margin-bottom: 0.5rem;
 }
