--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,20 +6,29 @@
   float: left;
 }
 
+.loading_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100px;
+  margin-top: 0;
+}
+
 .checkbox_group_container {
-    font-size: .875em;
-    max-height: 0;
-    visibility: hidden;
-    transition: 0.2s;
-    z-index: 9000;
-    overflow: auto;
-    margin-top: 0;
-    margin-left: 1em;
-    width: 766px;
-  }
+  font-size: .875em;
+  max-height: 0;
+  visibility: hidden;
+  transition: 0.3s;
+  z-index: 9000;
+  overflow: auto;
+  margin-top: 0;
+  padding: 0rem 1rem;
+  width: 766px;
+}
 
 .checkbox_group_container_show {
-  display:inline-block;
+  display: inline-block;
   float: left;
   visibility: visible;
   opacity: 1;
@@ -27,23 +36,27 @@
   overflow: auto;
   transition: 0.3s;
   margin-top: 1em;
+  margin-bottom: 1rem;
   overflow: hidden;
 }
 
 .checkbox_container {
-  margin-right: 10px;
-  border-radius: 3px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
 
+.checkbox {
+  margin: 0px 20px 0px 0px;
+  border-radius: 3px;
+  float: left;
+  overflow: hidden;
 }
 
 .checkbox_input {
-  margin-right:0px;
+  margin-right: 0px;
 }
-
-/* from meeting with James Zhang - June 21 */
-/*input[type=checkbox] + label.checkbox_input {
-  margin-right:0px;
-}*/
 
 .checkbox_label {
   margin-right: 15px;
@@ -54,19 +67,18 @@
 
 .conversation_frame {
   width: 700px;
-  margin:auto;
+  margin: auto;
   padding: 10px;
   height: auto;
   min-height: 90px;
   overflow: auto;
-
 }
 
 .reset_link {
   margin-bottom: 1em;
 }
 
-.conversation {
+.conversation_container {
   width: 100%;
   border: 1px solid #c7c7c7;
   border-top-left-radius: 10px;
@@ -82,9 +94,10 @@
   padding: 20px;
   width: 766px;
 }
+
 .conversation_header {
   width: 100%;
-  padding-left:20px;
+  padding-left: 20px;
   padding-top: 10px;
   font-size: 1.25em;
 }
@@ -98,34 +111,35 @@
   float: left;
   margin-top: 0;
 }
+
 .consumer {
   background-color: #F5F3FA;
 }
 
 .avatar {
-  float:left;
+  float: left;
   margin-right: 1em;
   width: 70px;
-
   margin-top: 0;
   margin-bottom: 0;
 }
+
 .customer_avatar {
-    background-image: url("/images/customer.png");
-    height: 70px;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    border: 1px solid #c7c7c7;
-    border-radius: 10px;
+  background-image: url("/images/customer.png");
+  height: 70px;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  border: 1px solid #c7c7c7;
+  border-radius: 10px;
 }
 
 .agent_avatar {
-    background-image: url("/images/agent.png");
-    height: 70px;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    border: 1px solid #c7c7c7;
-    border-radius: 10px;
+  background-image: url("/images/agent.png");
+  height: 70px;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  border: 1px solid #c7c7c7;
+  border-radius: 10px;
 }
 
 .statement_container {
@@ -134,13 +148,16 @@
   margin-top: 0;
   min-height: 70px;
 }
+
 .speaker_name {
   font-weight: bold;
   font-size: .875em;
 }
+
 .speaker_handle {
   font-size: .875em;
 }
+
 .time_stamp {
   text-transform: uppercase;
   color: #777677;
@@ -177,6 +194,7 @@
   width: auto;
   flex-grow: 2;
 }
+
 .tone_score {
   font-weight: bold;
   float: left;
@@ -184,8 +202,9 @@
   margin-top: 0;
   width: 25%;
 }
+
 .other_tones {
-font-size: 0.75em;
+  font-size: 0.75em;
 }
 
 .negative {
@@ -217,7 +236,7 @@ font-size: 0.75em;
   background: transparent;
 }
 
-.base--radio:checked + .buttons-group--button .icon {
+.base--radio:checked+.buttons-group--button .icon {
   fill: rgb(152, 85, 212);
 }
 
@@ -238,29 +257,32 @@ font-size: 0.75em;
   border: 1px solid #c7c7c7;
   margin-top: 0;
 }
+
 .input_wrapper {
   margin-left: 20px;
   margin-right: 20px;
   margin-top: 20px;
   margin-bottom: 20px;
 }
+
 textarea {
-  height:70px;
+  height: 70px;
   border: 1px solid #aeaeae;
   resize: none;
 }
 
 .input_area {
-    width: 90%;
-    float: left;
-    margin-top: 0;
+  width: 90%;
+  float: left;
+  margin-top: 0;
 }
+
 #newUtteranceTextArea:invalid {
-    box-shadow: none;
+  box-shadow: none;
 }
 
 .input_avatar {
-  float:left;
+  float: left;
   width: 35px;
   height: 35px;
   border: 1px solid #c7c7c7;
@@ -268,11 +290,13 @@ textarea {
   border-radius: 5px;
   margin-right: 1em;
 }
+
 .submit_button {
   float: right;
   margin-right: 15px;
   margin-top: 20px;
 }
+
 .reset {
   float: left;
 }
@@ -281,6 +305,7 @@ textarea {
   float: right;
   margin-top: 0;
 }
+
 .conversation_footer {
   height: auto;
   margin-bottom: 1em;
@@ -296,7 +321,7 @@ textarea {
 }
 
 .alerttext {
-    color: red;
+  color: red;
 }
 
 .question-input--input {
@@ -321,18 +346,20 @@ textarea {
 }
 
 .agree_container {
-    float: right;
-    margin-top: -20px;
-    margin-right: 0;
-    margin-bottom: 0.5rem;
+  float: right;
+  margin-top: -20px;
+  margin-right: 0;
+  margin-bottom: 0.5rem;
 }
+
 .agree_link {
-    font-size: .75em;
+  font-size: .75em;
 }
 
 .base--a {
   cursor: pointer;
 }
+
 .service-error {
   text-align: center;
 }
@@ -345,6 +372,7 @@ textarea {
 }
 
 .service-error--message {
-  color: #d74108;;
+  color: #d74108;
+  ;
   text-align: center;
 }
