--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,20 +6,35 @@
   float: left;
 }
 
+.loading_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100px;
+  margin-top: 0;
+  /*text-align: center;*/
+  /*background-color: #f4f4f4;*/
+  /*border-bottom-left-radius: 10px;*/
+  /*border-bottom-right-radius: 10px;*/
+  /*border: 1px solid #c7c7c7;*/
+}
+
 .checkbox_group_container {
     font-size: .875em;
     max-height: 0;
     visibility: hidden;
-    transition: 0.2s;
+    transition: 0.3s;
     z-index: 9000;
     overflow: auto;
     margin-top: 0;
-    margin-left: 1em;
+    /*margin-left: 1em;*/
+    padding: 0rem 1rem;
     width: 766px;
   }
 
 .checkbox_group_container_show {
-  display:inline-block;
+  display: inline-block;
   float: left;
   visibility: visible;
   opacity: 1;
@@ -27,13 +42,29 @@
   overflow: auto;
   transition: 0.3s;
   margin-top: 1em;
+  margin-bottom: 1rem;
   overflow: hidden;
 }
 
 .checkbox_container {
-  margin-right: 10px;
-  border-radius: 3px;
+  /*float: left;*/
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
 
+.checkbox {
+  margin: 0px 20px 0px 0px;
+  /*margin-right: 10px;*/
+  border-radius: 3px;
+  float: left;
+  overflow: hidden;
+
+}
+
+.description {
+  /*margin-bottom: 1em;*/
 }
 
 .checkbox_input {
@@ -66,7 +97,7 @@
   margin-bottom: 1em;
 }
 
-.conversation {
+.conversation_container {
   width: 100%;
   border: 1px solid #c7c7c7;
   border-top-left-radius: 10px;
