minor css cleanup

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,16 +16,16 @@
 }
 
 .checkbox_group_container {
-    font-size: .875em;
-    max-height: 0;
-    visibility: hidden;
-    transition: 0.3s;
-    z-index: 9000;
-    overflow: auto;
-    margin-top: 0;
-    padding: 0rem 1rem;
-    width: 766px;
-  }
+  font-size: .875em;
+  max-height: 0;
+  visibility: hidden;
+  transition: 0.3s;
+  z-index: 9000;
+  overflow: auto;
+  margin-top: 0;
+  padding: 0rem 1rem;
+  width: 766px;
+}
 
 .checkbox_group_container_show {
   display: inline-block;
@@ -52,14 +52,10 @@
   border-radius: 3px;
   float: left;
   overflow: hidden;
-
-}
-
-.description {
 }
 
 .checkbox_input {
-  margin-right:0px;
+  margin-right: 0px;
 }
 
 .checkbox_label {
@@ -71,12 +67,11 @@
 
 .conversation_frame {
   width: 700px;
-  margin:auto;
+  margin: auto;
   padding: 10px;
   height: auto;
   min-height: 90px;
   overflow: auto;
-
 }
 
 .reset_link {
@@ -99,9 +94,10 @@
   padding: 20px;
   width: 766px;
 }
+
 .conversation_header {
   width: 100%;
-  padding-left:20px;
+  padding-left: 20px;
   padding-top: 10px;
   font-size: 1.25em;
 }
@@ -115,34 +111,35 @@
   float: left;
   margin-top: 0;
 }
+
 .consumer {
   background-color: #F5F3FA;
 }
 
 .avatar {
-  float:left;
+  float: left;
   margin-right: 1em;
   width: 70px;
-
   margin-top: 0;
   margin-bottom: 0;
 }
+
 .customer_avatar {
-    background-image: url("/images/customer.png");
-    height: 70px;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    border: 1px solid #c7c7c7;
-    border-radius: 10px;
+  background-image: url("/images/customer.png");
+  height: 70px;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  border: 1px solid #c7c7c7;
+  border-radius: 10px;
 }
 
 .agent_avatar {
-    background-image: url("/images/agent.png");
-    height: 70px;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    border: 1px solid #c7c7c7;
-    border-radius: 10px;
+  background-image: url("/images/agent.png");
+  height: 70px;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  border: 1px solid #c7c7c7;
+  border-radius: 10px;
 }
 
 .statement_container {
@@ -151,13 +148,16 @@
   margin-top: 0;
   min-height: 70px;
 }
+
 .speaker_name {
   font-weight: bold;
   font-size: .875em;
 }
+
 .speaker_handle {
   font-size: .875em;
 }
+
 .time_stamp {
   text-transform: uppercase;
   color: #777677;
@@ -194,6 +194,7 @@
   width: auto;
   flex-grow: 2;
 }
+
 .tone_score {
   font-weight: bold;
   float: left;
@@ -201,6 +202,7 @@
   margin-top: 0;
   width: 25%;
 }
+
 .other_tones {
   font-size: 0.75em;
 }
@@ -234,7 +236,7 @@
   background: transparent;
 }
 
-.base--radio:checked + .buttons-group--button .icon {
+.base--radio:checked+.buttons-group--button .icon {
   fill: rgb(152, 85, 212);
 }
 
@@ -255,29 +257,32 @@
   border: 1px solid #c7c7c7;
   margin-top: 0;
 }
+
 .input_wrapper {
   margin-left: 20px;
   margin-right: 20px;
   margin-top: 20px;
   margin-bottom: 20px;
 }
+
 textarea {
-  height:70px;
+  height: 70px;
   border: 1px solid #aeaeae;
   resize: none;
 }
 
 .input_area {
-    width: 90%;
-    float: left;
-    margin-top: 0;
+  width: 90%;
+  float: left;
+  margin-top: 0;
 }
+
 #newUtteranceTextArea:invalid {
-    box-shadow: none;
+  box-shadow: none;
 }
 
 .input_avatar {
-  float:left;
+  float: left;
   width: 35px;
   height: 35px;
   border: 1px solid #c7c7c7;
@@ -285,11 +290,13 @@ textarea {
   border-radius: 5px;
   margin-right: 1em;
 }
+
 .submit_button {
   float: right;
   margin-right: 15px;
   margin-top: 20px;
 }
+
 .reset {
   float: left;
 }
@@ -298,6 +305,7 @@ textarea {
   float: right;
   margin-top: 0;
 }
+
 .conversation_footer {
   height: auto;
   margin-bottom: 1em;
@@ -313,7 +321,7 @@ textarea {
 }
 
 .alerttext {
-    color: red;
+  color: red;
 }
 
 .question-input--input {
@@ -338,18 +346,20 @@ textarea {
 }
 
 .agree_container {
-    float: right;
-    margin-top: -20px;
-    margin-right: 0;
-    margin-bottom: 0.5rem;
+  float: right;
+  margin-top: -20px;
+  margin-right: 0;
+  margin-bottom: 0.5rem;
 }
+
 .agree_link {
-    font-size: .75em;
+  font-size: .75em;
 }
 
 .base--a {
   cursor: pointer;
 }
+
 .service-error {
   text-align: center;
 }
@@ -362,6 +372,7 @@ textarea {
 }
 
 .service-error--message {
-  color: #d74108;;
+  color: #d74108;
+  ;
   text-align: center;
 }
