--- a/public/css/style.css
+++ b/public/css/style.css
@@ -380,3 +380,20 @@ textarea {
   ;
   text-align: center;
 }
+
+.language_header {
+  width: 100%;
+  padding-left: 20px;
+  padding-top: 10px;
+  font-size: 1.25em;
+}
+
+.select_language_header {
+  float: left;
+  width: 50%;
+}
+
+.language_options {
+  float: left;
+  margin-top: 0;
+}
