--- a/public/css/style.css
+++ b/public/css/style.css
@@ -214,37 +214,38 @@
   color: #DB207C;
 }
 
-.buttons-group {
+
+.feedback .buttons-group {
   margin-top: 0;
   width: auto;
 }
 
-.buttons-group--button {
+.feedback .buttons-group--button {
   border: none;
   border-radius: 0rem;
   padding: 0rem;
 }
 
-.buttons-group--button_last {
+.feedback .buttons-group--button_last {
   border-radius: 0rem;
   padding-right: 1rem;
 }
 
-.buttons-group--button_first {
+.feedback .buttons-group--button_first {
   border-radius: 0rem;
   padding-right: 0rem;
 }
 
-.base--radio:checked+.buttons-group--button {
+.feedback .base--radio:checked+.buttons-group--button {
   background: transparent;
 }
 
 
-.base--radio:checked + .buttons-group--button .icon {
+.feedback .base--radio:checked + .buttons-group--button .icon {
   fill: rgb(152, 85, 212);
 }
 
-.buttons-group--button:active {
+.feedback .buttons-group--button:active {
   background: transparent;
 }
 
@@ -390,10 +391,11 @@ textarea {
 
 .select_language_header {
   float: left;
-  width: 50%;
+  width: 20%;
 }
 
 .language_options {
   float: left;
   margin-top: 0;
+  width: 80%;
 }
